objects/SalesAgentSalesOfficeLink__c.object
<CustomObject>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newstar_ID__c</fullName>
        <externalId>true</externalId>
        <label>Newstar ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Agent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Agent</label>
        <referenceTo>Sales_Agent__c</referenceTo>
        <relationshipLabel>Sales Agent Sales Office Relationships</relationshipLabel>
        <relationshipName>Sales_Agent_Sales_Office_Relationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Office</label>
        <referenceTo>Sales_Office__c</referenceTo>
        <relationshipLabel>Sales Agent Sales Office Relationships</relationshipLabel>
        <relationshipName>Sales_Agent_Sales_Office_Relationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Sales Agent Sales Office Relationship</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Agent Sales Office Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>